# devmons

./: .env  .importlinter  Makefile  README.md  docker-compose.yaml  dockerfile  prometheus.yml  pyproject.toml
.github/workflows/: python-app.yaml
alembic/: env.py
alembic/versions/: 0001_init.py
crypkit/: config.py  container.py  main.py
crypkit/adapters/api/: app.py  crypto.py  schema.py
crypkit/adapters/driven/: coingecko.py
crypkit/adapters/driven/repository/: config.py  schema.py  sqlalchemy.py
crypkit/core/: error.py  model.py
crypkit/ports/driven/: coingecko.py  repository.py
crypkit/ports/driving/: crud.py  refresh.py
crypkit/service/: crypto.py
docs/architecture/decisions/: 0001-record-architecture-decisions.md  0002-use-hexagonal-architecture.md  0003-rest-api-framework.md  0004-database.md  0005-coingecko-integration.md  0006-who-generates-id.md
grafana_data/: grafana.db
tests/acceptance/features/crypto/: add.feature  delete.feature  retrieve.feature  update.feature
tests/integration/adapters/driven/: conftest.py  test_repository.py
tests/unit/ports/driven/: test_repository.py
tests/unit/service/: conftest.py
tests/unit/service/crypto/: test_create.py  test_delete.py  test_read.py  test_update.py
