[project]
name = "crypkit"
version = "0.1.0"
description = ""
authors = [
    { name = "Roman Rakus", email = "roman@romamnrakus.cz" }
]
readme = "README.md"
requires-python = ">=3.12"
packages = [{ include = "crypkit" }]

[tool.poetry]
packages = [{ include = "crypkit" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "2.11.1"
pydantic-settings = "2.8.1"
redis = "5.2.1"
sqlalchemy = "2.0.40"
asyncpg = "0.30.0"
greenlet = "3.1.1"
alembic = "1.15.2"
httpx = "0.28.1"
ujson = "5.10.0"
fastapi = "0.115.12"
uvicorn = "0.34.0"
dependency-injector = "4.46.0"
prometheus-fastapi-instrumentator = "7.1.0"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
black = "25.1.0"
mypy = "1.15.0"
pylint = "3.3.4"
ruff = "0.9.6"
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
types-ujson = "5.10.0.20250326"
fastapi = { version = "0.115.12", extras = ["standard"] }
import-linter = "2.3"

[tool.poetry.scripts]
start = "crypkit.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "F", # flake8 / pyflakes
    "E", # flake8 / pycodestyle, errors
    "W", # flake8 / pycodestyle, warning
    "C90", # McCabe
    "I", # isort
    "N", # pep8 naming, might already by checked by PyLint
    "D", # pydocstyle
    "UP", # pyupgrade
    "S", # bandit
    "A", # builtins
    "RUF", # ruff specific
]
extend-ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in `__init__`
    "D203", # one-blank-line-before-class
    "D213", # multi-line-summary-second-line
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # don't check asserts in tests

[tool.mypy]
mypy_path = "crypkit"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
